# RT_the_next_weekend

./: .gitignore  CMakeLists.txt  Image_1_Bouncing_spheres.ppm  README.md  aabb.h  aarect.h  box.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  main.cpp  material.h  moving_sphere.h  perlin.h  ray.h  rtweekend.h  sphere.h  texture.h  vec3.h
pic/: Image_10_Perlin_noise_marbled_texture.ppm  Image_11_Earth-mapped_sphere.ppm  Image_12_sky_color.ppm  Image_13_Scene_with_rectangle_light_source.ppm  Image_14_Empty_Cornell_box.ppm  Image_15_Cornell_box_with_two_blocks.ppm  Image_16_Standard_Cornell_box_scene.ppm  Image_17_Cornell_box_with_blocks_of_smoke.ppm  Image_1_Bouncing_spheres.ppm  Image_2_Spheres_on_checkered_ground.ppm  Image_3_Checkered_spheres.ppm  Image_4_Hashed_random_texture.ppm  Image_5_Perlin_texture_with_trilinear_interpolation.ppm  Image_6_Perlin_texture_trilinearly_interpolated_smoothed.ppm  Image_7_Perlin_texture_higher_frequency.ppm  Image_8_Perlin_texture_shifted_off_integer_values.ppm  Image_9_Perlin_texture_with_turbulence.ppm
